css/mobile/mobile.css
@media only screen  and (max-width: 480px) {

    .directions { display: none; }
    
    .game-stats {
        top: unset;
        bottom: 0;
    }

    .game-image-wrapper {
        justify-content: center;
    }

    .giw-2 { width: 100%; }

    .game-image {
        width: 90%;
        height: auto;
        aspect-ratio: 1.2;
        margin-top: 0.5rem;
    }

    .logo-wrap {
        flex-direction: column;
    }

    .favicon {
        margin-right: 0;
        width: 57%;
        margin-bottom: 3rem;
    }

    .level-relative {
        width: 70vw;
    }

    .game-stats { display: none; }
    .game-stats-mobile { display: flex; }

    /* Confirm btn */
    .mid-wrapper {
        top: unset;
        bottom: 0;
        width: max-content; /* So "Next round", "xm away +x pts" doesn't break and shorten btd width */
    }

}

.game-stats-mobile {
    background-color: white;
    border-radius: 15px;
    padding: 0.2rem 1rem;
    width: fit-content;
    margin-top: 0.5rem;
    white-space: preserve;
}

